bk_ida/gccida/c0/store_expr
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4385:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4386:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4388:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4393:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *arg0; // [rsp+48h] [rbp-E8h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4397:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *copy_size; // [rsp+D0h] [rbp-60h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4430:16: error: expected expression
QTemporaryFile::QTemporaryFile( exp->vector.elements, lab1); 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4454:33: error: use of undeclared identifier 'machine_mode'
temp = expand_expr( exp, 0LL, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target), EXPAND_NORMAL); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4454:48: error: expected expression
temp = expand_expr( exp, 0LL, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target), EXPAND_NORMAL); 
                                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4458:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target)); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4458:36: error: expected expression
v4 = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target)); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4459:32: error: use of undeclared identifier 'machine_mode'
temp = expand_expr( exp, v4, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)targeta), EXPAND_NORMAL); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4459:47: error: expected expression
temp = expand_expr( exp, v4, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)targeta), EXPAND_NORMAL); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4477:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)targeta), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4477:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)targeta), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4478:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( exp->common.type->block.abstract_origin)) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4517:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( sizetype_tab[0]->block.abstract_origin)) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4532:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)sizea), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4532:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)sizea), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/expr.c:4562:27: error: use of undeclared identifier 'machine_mode'
temp = convert_to_mode( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)targeta), temp, unsignedp); 
                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_expr/src/obj/expr.o] Error 1
